Header looking better.

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -21,8 +21,13 @@ body::after {
     z-index: -1;   
 }
 
+header {
+    margin: auto;
+    max-width: 800px;
+}
+
 .green {
-    background-color: lightgreen;
+    background-color: rgb(189, 225, 94);
 }
 
 .capitalize {
